# BURST

./: .gitignore  CMakeLists.txt  README.md  game_libs.h  main.cpp  problem_fixes.txt
assets/: vignette_frag.glsl
assets/maps/The Robots/: map_data.csv
assets/shaders/: bounce_distort.glsl  dash_arrow.glsl  vertex.glsl
assets/weapons/: pistol.json
core/: Core.cpp  Core.h  Map.cpp  Map.h
game/: Camera.cpp  Camera.h  Game.cpp  Game.h  Map.cpp  Map.h  Particles.cpp  Particles.h  Player.cpp  Player.h  Resources.cpp  Resources.h  Sounds.cpp  Sounds.h  UI.cpp  UI.h  Weapon.cpp  Weapon.h
game/core/: Game.cpp  Game.h  GameClient.cpp  GameServer.cpp  UI.cpp  UI.h
game/player/: Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Player.cpp  Player.h  Weapon.cpp  Weapon.h
game/res/: ClientResources.cpp  ClientResources.h  ServerResources.cpp  ServerResources.h
game/world/: Animation.cpp  Animation.h  Map.cpp  Map.h  Particles.cpp  Particles.h  Sounds.cpp  Sounds.h  WorldMap.cpp  WorldMap.h
network/: Packet.h  Player.cpp  Player.h  Utils.cpp  Utils.h
network/client/: Client.cpp  Client.h  ClientEventActions.cpp  ClientEventActions.h  EventActions.cpp  EventActions.h
network/server/: Server.cpp  Server.h  ServerEventActions.cpp  ServerEventActions.h
pyscripts/: create_exe.py
